Lay out HTML content and update css with reset css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,159 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    hello world!
+    <div class="container">
+        <div class="sidebar">
+            <h1>Dashboard</h1>
+            <ul>
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>             
+            </ul>
+            <ul>
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
+        </div>
+        <div class="header">
+            <div class="headerFirst">
+                <div class="srchIcon"></div>
+                <div class="srchInput"></div>
+                <div class="notificationIcon"></div>
+                <div class="profileIcon"></div>
+                <div class="name">Aman Kumar</div>
+            </div>
+            <div class="headerSecond">
+                <div class="profilePhoto">
+                </div>
+                <div class="data">
+                    <div class="greetings">Hi there,</div>
+                    <div class="nameHandle">Aman Kumar(@peace_duudee)</div>
+                </div>
+            </div>
+            <div class="btn">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>  
+            </div>
+        </div>
+        <div class="content">
+            <div class="projects">
+                <h3>Your Projects</h3>
+                <div class="cards">
+                    <h4>Super Cool Project</h4>
+                    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                    </div>
+                </div>
+                <div class="cards">
+                    <h4>Super Cool Project</h4>
+                    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                    </div>
+                </div>
+                <div class="cards">
+                    <h4>Less Cool Project</h4>
+                    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                    </div>
+                    <div class="cardIcons">
+                        <button></button>
+                        <button></button>
+                        <button></button>
+                    </div>
+                </div>
+                <div class="cards">
+                    <h4>Impossible App</h4>
+                    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                    </div>
+                    <div class="cardIcons">
+                        <button></button>
+                        <button></button>
+                        <button></button>
+                    </div>
+                </div>
+                <div class="cards">
+                    <h4>Easy Peasy App</h4>
+                    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                    </div>
+                    <div class="cardIcons">
+                        <button></button>
+                        <button></button>
+                        <button></button>
+                    </div>
+                </div>
+                <div class="cards">
+                    <h4>Ad Blocker</h4>
+                    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                    </div>
+                    <div class="cardIcons">
+                        <button></button>
+                        <button></button>
+                        <button></button>
+                    </div>
+                </div>
+                <div class="cards">
+                    <h4>Money Maker</h4>
+                    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                    </div>
+                    <div class="cardIcons">
+                        <button></button>
+                        <button></button>
+                        <button></button>
+                    </div>
+                </div>
+            </div>
+            <div class="announcements">
+                <h3>Announcements</h3>
+                <div class="acards">
+                    <h4>Site Maintenance</h4>
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, earum totam dolor voluptatum, eveniet deleniti eaque tempore inventore eligendi 
+                    </div>
+                </div>
+                <div class="acards">
+                    <h4>Site Maintenance</h4>
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, earum totam dolor voluptatum, eveniet deleniti eaque tempore inventore eligendi 
+                    </div>
+                </div>
+                <div class="acards">
+                    <h4>Site Maintenance</h4>
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, earum totam dolor voluptatum, eveniet deleniti eaque tempore inventore eligendi 
+                    </div>
+                </div>          
+            </div>
+            <div class="trending">
+                <h3>Trending</h3>
+                <div class="tcards">
+                    <div class="profilePic"></div>
+                    <div class="profileDetails">
+                        <div class="profileTag">@tegan</div>
+                        <div class="profileName">World Peace Builder</div>
+                    </div>
+                </div>
+                <div class="tcards">
+                    <div class="profilePic"></div>
+                    <div class="profileDetails">
+                        <div class="profileTag">@morgan</div>
+                        <div class="profileName">Super Cool Project</div>
+                    </div>
+                </div>
+                <div class="tcards">
+                    <div class="profilePic"></div>
+                    <div class="profileDetails">
+                        <div class="profileTag">@kendall</div>
+                        <div class="profileName">Life Changing App</div>
+                    </div>
+                </div>
+                <div class="tcards">
+                    <div class="profilePic"></div>
+                    <div class="profileDetails">
+                        <div class="profileTag">@alex</div>
+                        <div class="profileName">No Traffic Maker</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
