add profile pic, improve ui for header in main_content

--- a/index.html
+++ b/index.html
@@ -28,24 +28,29 @@
         <div class="mainContent">
             <div class="header">
                 <div class="headerFirst">
-                    <div class="srchIcon"></div>
-                    <div class="srchInput"></div>
-                    <div class="notificationIcon"></div>
-                    <div class="profileIcon"></div>
-                    <div class="name">Aman Kumar</div>
+                    <div class="left">
+                        <img src="icons/search-svgrepo-com.svg" alt="" srcset="" class="sizeIcon">
+                        <input type="text" class="searchBar">
+                    </div>
+                    <div class="right">
+                        <img src="icons/bell-ringing-svgrepo-com.svg" alt="" srcset="" class="sizeIcon">
+                        <img src="./images/Screenshot from 2023-11-02 13-54-04.png" alt="" width="60px">
+                        <div class="name">Aman Kumar</div>
+                    </div>
                 </div>
                 <div class="headerSecond">
-                    <div class="profilePhoto">
+                    <div class="left">
+                        <img src="images/Screenshot from 2023-11-02 13-54-04.png" alt="" width="80px">
+                        <div class="data">
+                            <div class="greetings">Hi there,</div>
+                            <div class="nameHandle">Aman Kumar(@peace_duudee)</div>
+                        </div>
                     </div>
-                    <div class="data">
-                        <div class="greetings">Hi there,</div>
-                        <div class="nameHandle">Aman Kumar(@peace_duudee)</div>
+                    <div class="btn">
+                        <button>New</button>
+                        <button>Upload</button>
+                        <button>Share</button>
                     </div>
-                </div>
-                <div class="btn">
-                    <button>New</button>
-                    <button>Upload</button>
-                    <button>Share</button>
                 </div>
             </div>
             <div class="content">
