improve main content ui, add border-shadow

--- a/index.html
+++ b/index.html
@@ -56,74 +56,66 @@
             <div class="content">
                 <div class="projects">
                     <h3>Your Projects</h3>
-                    <div class="cards">
-                        <h4>Super Cool Project</h4>
-                        <div  class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                    <div class="cardFlex">
+                        <div class="cards">
+                            <h4>Super Cool Project</h4>
+                            <div  class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                            </div>
+                            <div class="cardIcons">
+                                <button></button>
+                                <button></button>
+                                <button></button>
+                            </div>
                         </div>
-                        <div class="cardIcons">
-                            <button></button>
-                            <button></button>
-                            <button></button>
+                        <div class="cards">
+                            <h4>Less Cool Project</h4>
+                            <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                            </div>
+                            <div class="cardIcons">
+                                <button></button>
+                                <button></button>
+                                <button></button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="cards">
-                        <h4>Super Cool Project</h4>
-                        <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                        <div class="cards">
+                            <h4>Impossible App</h4>
+                            <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                            </div>
+                            <div class="cardIcons">
+                                <button></button>
+                                <button></button>
+                                <button></button>
+                            </div>
                         </div>
-                        <div class="cardIcons">
-                            <button></button>
-                            <button></button>
-                            <button></button>
+                        <div class="cards">
+                            <h4>Easy Peasy App</h4>
+                            <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                            </div>
+                            <div class="cardIcons">
+                                <button></button>
+                                <button></button>
+                                <button></button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="cards">
-                        <h4>Less Cool Project</h4>
-                        <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                        <div class="cards">
+                            <h4>Ad Blocker</h4>
+                            <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                            </div>
+                            <div class="cardIcons">
+                                <button></button>
+                                <button></button>
+                                <button></button>
+                            </div>
                         </div>
-                        <div class="cardIcons">
-                            <button></button>
-                            <button></button>
-                            <button></button>
-                        </div>
-                    </div>
-                    <div class="cards">
-                        <h4>Impossible App</h4>
-                        <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
-                        </div>
-                        <div class="cardIcons">
-                            <button></button>
-                            <button></button>
-                            <button></button>
-                        </div>
-                    </div>
-                    <div class="cards">
-                        <h4>Easy Peasy App</h4>
-                        <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
-                        </div>
-                        <div class="cardIcons">
-                            <button></button>
-                            <button></button>
-                            <button></button>
-                        </div>
-                    </div>
-                    <div class="cards">
-                        <h4>Ad Blocker</h4>
-                        <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
-                        </div>
-                        <div class="cardIcons">
-                            <button></button>
-                            <button></button>
-                            <button></button>
-                        </div>
-                    </div>
-                    <div class="cards">
-                        <h4>Money Maker</h4>
-                        <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
-                        </div>
-                        <div class="cardIcons">
-                            <button></button>
-                            <button></button>
-                            <button></button>
+                        <div class="cards">
+                            <h4>Money Maker</h4>
+                            <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
+                            </div>
+                            <div class="cardIcons">
+                                <button></button>
+                                <button></button>
+                                <button></button>
+                            </div>
                         </div>
                     </div>
                 </div>
