change ui for annoucements and trending

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                             <div  class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
                             </div>
                             <div class="cardIcons">
-                                <button></button>
-                                <button></button>
-                                <button></button>
+                                <img src="icons/star-plus-outline.svg" alt="" srcset="" class="sizeIcon">
+                                <img src="icons/eye-plus-outline.svg" alt="" srcset=""class="sizeIcon">
+                                <img src="icons/source-fork.svg" alt="" srcset="" class="sizeIcon">
                             </div>
                         </div>
                         <div class="cards">
@@ -72,9 +72,9 @@
                             <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
                             </div>
                             <div class="cardIcons">
-                                <button></button>
-                                <button></button>
-                                <button></button>
+                                <img src="icons/star-plus-outline.svg" alt="" srcset="" class="sizeIcon" >
+                                <img src="icons/eye-plus-outline.svg" alt="" srcset=""class="sizeIcon">
+                                <img src="icons/source-fork.svg" alt="" srcset="" class="sizeIcon">
                             </div>
                         </div>
                         <div class="cards">
@@ -82,9 +82,9 @@
                             <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
                             </div>
                             <div class="cardIcons">
-                                <button></button>
-                                <button></button>
-                                <button></button>
+                                <img src="icons/star-plus-outline.svg" alt="" srcset="" class="sizeIcon" >
+                                <img src="icons/eye-plus-outline.svg" alt="" srcset=""class="sizeIcon">
+                                <img src="icons/source-fork.svg" alt="" srcset="" class="sizeIcon">
                             </div>
                         </div>
                         <div class="cards">
@@ -92,9 +92,9 @@
                             <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
                             </div>
                             <div class="cardIcons">
-                                <button></button>
-                                <button></button>
-                                <button></button>
+                                <img src="icons/star-plus-outline.svg" alt="" srcset="" class="sizeIcon">
+                                <img src="icons/eye-plus-outline.svg" alt="" srcset=""class="sizeIcon">
+                                <img src="icons/source-fork.svg" alt="" srcset="" class="sizeIcon">
                             </div>
                         </div>
                         <div class="cards">
@@ -102,9 +102,9 @@
                             <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
                             </div>
                             <div class="cardIcons">
-                                <button></button>
-                                <button></button>
-                                <button></button>
+                                <img src="icons/star-plus-outline.svg" alt="" srcset="" class="sizeIcon">
+                                <img src="icons/eye-plus-outline.svg" alt="" srcset=""class="sizeIcon">
+                                <img src="icons/source-fork.svg" alt="" srcset="" class="sizeIcon">
                             </div>
                         </div>
                         <div class="cards">
@@ -112,35 +112,37 @@
                             <div class="cardContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam eius, repudiandae ratione saepe architecto cum recusandae. Nobis, dicta maiores distinctio vero ratione, doloremque rem autem non veritatis, blanditiis sequi!
                             </div>
                             <div class="cardIcons">
-                                <button></button>
-                                <button></button>
-                                <button></button>
+                                <img src="icons/star-plus-outline.svg" alt="" srcset="" class="sizeIcon">
+                                <img src="icons/eye-plus-outline.svg" alt="" srcset=""class="sizeIcon">
+                                <img src="icons/source-fork.svg" alt="" srcset="" class="sizeIcon">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="notif">
-                <div class="announcements">
                     <h3>Announcements</h3>
+                <div class="announcements">
                     <div class="acards">
                         <h4>Site Maintenance</h4>
-                        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, earum totam dolor voluptatum, eveniet deleniti eaque tempore inventore eligendi
+                        <div class="cardText">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, earum totam dolor voluptatum, eveniet deleniti eaque tempore inventore eligendi
                         </div>
                     </div>
+                    <hr>
                     <div class="acards">
-                        <h4>Site Maintenance</h4>
-                        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, earum totam dolor voluptatum, eveniet deleniti eaque tempore inventore eligendi
+                        <h4>Content Developer
+                        </h4>
+                        <div class="cardText">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, earum totam dolor voluptatum, eveniet deleniti eaque tempore inventore eligendi
                         </div>
                     </div>
+                    <hr>
                     <div class="acards">
-                        <h4>Site Maintenance</h4>
-                        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, earum totam dolor voluptatum, eveniet deleniti eaque tempore inventore eligendi
+                        <h4>Site Developer</h4>
+                        <div class="cardText">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, earum totam dolor voluptatum, eveniet deleniti eaque tempore inventore eligendi
                         </div>
                     </div>
                 </div>
-                
-                    <div class="trending">
-                        <h3>Trending</h3>
+                <div class="trending">Trending</div>
+                    <div class="tCardContainer">
                         <div class="tcards">
                             <div class="profilePic"></div>
                             <div class="profileDetails">
